# costwise

./: .gitignore  CONTRIBUTING.md  COSTWISE_PHASE2_SUMMARY.md  COSTWISE_PHASE3_SUMMARY.md  COSTWISE_PHASE4_SUMMARY.md  COSTWISE_PHASE5_SUMMARY.md  COSTWISE_PHASE6_SUMMARY.md  COSTWISE_PLAN.md  COSTWISE_SHIP_PLAN.md  README.md  costwise.example.toml  costwise.toml  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-separation.md  min-max-implementation-plan.md
scripts/: validate.py
src/costwise/: __init__.py
src/costwise/cli/: doctor_cmd.py  gain_cmd.py  main.py  setup_cmd.py  wrap_cmd.py
src/costwise/config/: loader.py  schema.py
src/costwise/core/: __init__.py  arbitrage.py  budget.py  classifier.py  expected_cost.py  health.py  models.py  pricing.py  router.py  signals.py
src/costwise/dashboard/: __init__.py  app.py  charts.py  data.py
src/costwise/feedback/: detector.py  fingerprint.py  metrics.py  tuner.py  weight_learner.py
src/costwise/graph/: __init__.py  cache.py  loader.py  pruner.py  relevance.py
tests/: conftest.py  test_arbitrage_health.py  test_borderline.py  test_budget.py  test_cli_commands.py  test_dashboard_app.py  test_dashboard_charts.py  test_dashboard_data.py  test_expected_cost.py  test_feedback_detector.py  test_feedback_fingerprint.py  test_feedback_metrics.py  test_feedback_tuner.py  test_graph_cache.py  test_graph_loader.py  test_graph_pruner.py  test_graph_relevance.py  test_health.py  test_integration_graphify.py  test_integration_headroom.py  test_integration_litellm.py  test_integration_ponytail.py  test_integration_rtk.py  test_mcp_server.py  test_semantic_signals.py  test_vertex.py  test_weight_learner.py
(+24 files in other folders)
